cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/Monday_com_Integration__c.object-meta.xml
<CustomObject>
    <label>Monday.com Integration</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Monday.com Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monday.com Integration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>