cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Monday.com Integration</relationshipLabel>
    <relationshipName>Monday_com_Integration</relationshipName>
    <type>Lookup</type>
</CustomField>