cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Account_Client_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Client_Segment__c</fullName>
    <formula>TEXT(Order__r.Account.Client_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Client Segment</label>
    <type>Text</type>
</CustomField>