cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Account_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Entity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Legal Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>