cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Account_Related_Primary_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Account_Related_Primary_Exchange__c</fullName>
    <formula>TEXT(Order__r.Account.Primary_Exchange__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Related Primary Exchange</label>
    <type>Text</type>
</CustomField>