cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/AMER_Conference_Event_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>AMER_Conference_Event_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://kvprodman.atlassian.net/browse/HELP-33254</description>
    <inlineHelpText>Email Alert notification</inlineHelpText>
    <label>AMER Conference Event Email Sent</label>
    <type>Checkbox</type>
</CustomField>