cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Bill_To_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Legal_Entity_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill To: Legal Entity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>