cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>