cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Billing_Information_Email_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information_Email_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be checked if the billing information missing email is sent.</inlineHelpText>
    <label>Billing Information Email Alert Sent</label>
    <type>Checkbox</type>
</CustomField>