cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>