cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>