cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Business_Line_Change__c.field-meta.xml
<CustomField>
    <fullName>Business_Line_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox will be marked to true if the business line has changed labels. As well as an email sent trigger</inlineHelpText>
    <label>Business Line Change</label>
    <type>Checkbox</type>
</CustomField>