cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Buy_Side_Event_Email_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Buy_Side_Event_Email_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy Side Event Email Alert Sent</label>
    <type>Checkbox</type>
</CustomField>