cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Cancellation_Fee_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will checkoff when email alert sent out to notify orders have a cancellation fee.</inlineHelpText>
    <label>Cancellation Fee Email Notification</label>
    <type>Checkbox</type>
</CustomField>