cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>