cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Client_Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Cost_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Cost Code/PO#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>