cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Combined_Order_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Combined_Order_Opportunity_Amount__c</fullName>
    <label>Combined Order &amp; Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>