cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Conf_at_New_Status_6_Weeks_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Conf_at_New_Status_6_Weeks_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conference Orders Stuck at &quot;New&quot; Status 6 Weeks out.</description>
    <label>Conf at &quot;New&quot; Status 6 Weeks Email Sent</label>
    <type>Checkbox</type>
</CustomField>