cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Conference_High_Profile_Order_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Conference_High_Profile_Order_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conference High Profile Order Email Sent</label>
    <type>Checkbox</type>
</CustomField>