cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Monday.com Integration</relationshipLabel>
    <relationshipName>Monday_com_Integration</relationshipName>
    <type>Lookup</type>
</CustomField>