cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Monday.com Integration</relationshipLabel>
    <relationshipName>Monday_com_Integration</relationshipName>
    <type>Lookup</type>
</CustomField>