cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Converted_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted from Opportunity</label>
    <type>Checkbox</type>
</CustomField>