cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Corp_Services_Email_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Corp_Services_Email_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Corporate Services tagged orders email sent</inlineHelpText>
    <label>Corp Services Email Notification Sent</label>
    <type>Checkbox</type>
</CustomField>