cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Corporate_Services_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Services_Business_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Services Business Line</label>
    <type>Checkbox</type>
</CustomField>