cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Date_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Invoice Sent</label>
    <type>Date</type>
</CustomField>