cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Days_till_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Days_till_StartDate__c</fullName>
    <formula>Order__r.Start_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that looks at the Event&apos;s Start Date compared to Today.</inlineHelpText>
    <label>Days till Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>