cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description/Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>