cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <formula>TEXT(Order__r.Equipment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Type</label>
    <type>Text</type>
</CustomField>