cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Equipment_Type_Client_Choice__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type_Client_Choice__c</fullName>
    <formula>Order__r.Equipment_Type_Client_Choice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Type Client Choice</label>
    <type>Text</type>
</CustomField>