cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>