cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Event_Type_Client_Defined__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Client_Defined__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Type (Client Defined)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>