cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Four_Pack_Order_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Four_Pack_Order_from_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Four Pack Order from Opportunity</label>
    <type>Checkbox</type>
</CustomField>