cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Four_Pack_Status__c.field-meta.xml
<CustomField>
    <fullName>Four_Pack_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Four Pack Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>