cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/General_AV_Provider__c.field-meta.xml
<CustomField>
    <fullName>General_AV_Provider__c</fullName>
    <formula>TEXT(Order__r.General_AV_Provider__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General AV Provider</label>
    <type>Text</type>
</CustomField>