cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Ghost_Update__c.field-meta.xml
<CustomField>
    <fullName>Ghost_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ghost Update</label>
    <type>Checkbox</type>
</CustomField>