cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/High_Profile_Attendee_Details__c.field-meta.xml
<CustomField>
    <fullName>High_Profile_Attendee_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>High Profile Attendee Details</label>
    <type>TextArea</type>
</CustomField>