cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/High_Profile_Order__c.field-meta.xml
<CustomField>
    <fullName>High_Profile_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Profile Order</label>
    <type>Checkbox</type>
</CustomField>