cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Hybrid_Date_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Date_Time_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hybrid Date/Time Stamp</label>
    <type>DateTime</type>
</CustomField>