cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Hybrid_Email_Equipment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Email_Equipment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hybrid Email Equipment Sent</label>
    <type>Checkbox</type>
</CustomField>