cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Hybrid_Event__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Event__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hybrid Event?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>