cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Hybrid_Event_Change_Notice_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Event_Change_Notice_Checkbox__c</fullName>
    <formula>Order__r.Hybrid_On_Site_Event_Change_Notification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hybrid Event Change Notice Checkbox</label>
    <type>Checkbox</type>
</CustomField>