cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Interactive_Meetings_Avg_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Meetings_Avg_Per_Day__c</fullName>
    <formula>Number_of_Interactive_Meetings_Roll_Ups__c /  Order__r.Number_of_Days_of_the_Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interactive Meetings Avg Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>