cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/J_P_Morgan_CO__c.field-meta.xml
<CustomField>
    <fullName>J_P_Morgan_CO__c</fullName>
    <formula>IF(Number_of_Recordings__c &gt;= 1 &amp;&amp; Account_Name__c = &apos;J.P. Morgan&apos;, &quot;CO24902&quot;,      
IF(Number_of_Recordings__c = 0 &amp;&amp; Account_Name__c = &apos;J.P. Morgan&apos;, &quot;CO24751&quot;,                           
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula that looks at JP Morgan Accounts and if they have Recording products on them. The value will be used for invoicing purposes. Any questions Contact Tom Conigliaro or Finance.</inlineHelpText>
    <label>J.P. Morgan CO#</label>
    <type>Text</type>
</CustomField>