cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Lead_On_Site_AV_OP__c.field-meta.xml
<CustomField>
    <fullName>Lead_On_Site_AV_OP__c</fullName>
    <formula>TEXT( Order__r.Lead_On_Site_AV_OP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead On-Site AV OP.</label>
    <type>Text</type>
</CustomField>