cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Lead_On_Site_Technical_Director__c.field-meta.xml
<CustomField>
    <fullName>Lead_On_Site_Technical_Director__c</fullName>
    <description>Updated the field label by removing &quot;Lead&quot;</description>
    <formula>TEXT( Order__r.Lead_On_Site_Technical_Director__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On-Site Technical Director</label>
    <type>Text</type>
</CustomField>