cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/LSEG_Order__c.field-meta.xml
<CustomField>
    <fullName>LSEG_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox used to group all LSEG Orders for Monday.com Integration (Contact John H. or Mike Z for questions)</inlineHelpText>
    <label>LSEG Order</label>
    <type>Checkbox</type>
</CustomField>