cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/LSEG_Order_Formula__c.field-meta.xml
<CustomField>
    <fullName>LSEG_Order_Formula__c</fullName>
    <formula>IF (LSEG_Order__c = TRUE, 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field to help out temporarily the Monday.com Integration boards for Mike Z and Michael Brown (For some reason monday.com only has &quot;changes to&quot; as an option for a status automation, while values have the &quot;is&quot; option)</inlineHelpText>
    <label>LSEG Order Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>