cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Meeting_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Complexity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Complexity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>