cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Meeting_Room_Equipment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Equipment_Provider__c</fullName>
    <formula>TEXT(Order__r.Meeting_Room_Equipment_Provider__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Room Equipment Provider</label>
    <type>Text</type>
</CustomField>