cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Month_of_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_of_End_Date__c</fullName>
    <formula>CASE(MONTH(DATEVALUE(End_Date_Time__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the Month of the End Date. Will be used in a formula to see if the Start and End Date cross over into different months</inlineHelpText>
    <label>Month of End Date</label>
    <type>Text</type>
</CustomField>