cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/No_of_1_1_Rooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_1_1_Rooms__c</fullName>
    <formula>Order__r.Number_of_1_1_Rooms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of 1:1 Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>