cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/No_of_Backup_1_1_OE_Video_Eqp_d_Rooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Backup_1_1_OE_Video_Eqp_d_Rooms__c</fullName>
    <formula>Order__r.No_Backup_of_1_1_OE_Video_Equipped_Rooms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Backup 1:1 OE Video Eqp&apos;d Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>