cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/No_Sync_to_External_Systems__c.field-meta.xml
<CustomField>
    <fullName>No_Sync_to_External_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Sync to External Systems</label>
    <type>Checkbox</type>
</CustomField>