cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Add_Ons__c</fullName>
    <inlineHelpText>Rollup Summary of all Products designated with the add-on Product Family</inlineHelpText>
    <label>Number of Add-Ons</label>
    <summarizedField>Monday_com_Products__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Monday_com_Products__c.Product_Family__c</field>
        <operation>equals</operation>
        <value>Add-on</value>
    </summaryFilterItems>
    <summaryForeignKey>Monday_com_Products__c.Monday_com_Integration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>