cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Administrative_Fees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Administrative_Fees__c</fullName>
    <inlineHelpText>Number of  Administrative Fee</inlineHelpText>
    <label>Number of Administrative Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>