cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_AV_Equipment_Rentals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_AV_Equipment_Rentals__c</fullName>
    <label>Number of AV Equipment Rentals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>