cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Basic_Conference_Streamings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Basic_Conference_Streamings__c</fullName>
    <description>Number of Basic Conference Streaming Pacakages</description>
    <label>Number of Basic Conference Streamings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>