cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Branded_Homepage_Event_SC__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Branded_Homepage_Event_SC__c</fullName>
    <label>Number of Branded Homepage/Event SC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>