cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Broadcast_Center_Additions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Broadcast_Center_Additions__c</fullName>
    <inlineHelpText>Number of Broadcast Center Additional Services</inlineHelpText>
    <label>Number of Broadcast Center Additions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>